# Coder-Codex-Gemini

./: .gitignore  CLAUDE.md  README.md  README_EN.md  config.example.toml  pyproject.toml  setup.bat  setup.ps1  setup.sh  uninstall.bat  uninstall.ps1  uninstall.sh  需求文档.md
scripts/: check.sh
skills/cc-review/: SKILL.md  codex-guide.md  constraint.md
skills/ccg-workflow/: SKILL.md  constraint.md
skills/codex-review/: SKILL.md  constraint.md  examples.md
src/cc_mcp/: __init__.py  cli.py  config.py  server.py
src/cc_mcp/tools/: __init__.py  codex.py  command.py  errors.py  metrics.py  process.py  results.py
src/ccg_mcp/: config.py  server.py
src/ccg_mcp/tools/: coder.py  codex.py  gemini.py
templates/: cc-global-prompt.md
tests/: test_units.py
