[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cc-mcp"
version = "0.2.0"
description = "Claude + Codex 双模型协作 MCP 服务器：Claude 写代码，Codex 独立终审"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.20.0",
    "pydantic>=2.0",
]
authors = [
    { name = "CC-MCP Contributors" },
]
license = { text = "MIT" }
keywords = ["mcp", "fastmcp", "codex", "claude", "code-review"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/WuMe-sicx/Coder-Codex-Gemini"

[project.scripts]
cc-mcp = "cc_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/cc_mcp", "README.md", "LICENSE"]
